# tradingbot

./: Cargo.toml  README.md
src/: config.rs  data_collector.rs  inventory.rs  main.rs  pt.rs
src/order_books/: ob_gen.rs
